--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-    "name": "readme-generator",
-    "version": "1.0.0",
-    "description": "Application will query user for information, then build a README.md files for their project",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/AndreaGT91/Readme-Generator.git"
-    },
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-      "url": "https://github.com/AndreaGT91/Readme-Generator/issues"
-    },
-    "homepage": "https://github.com/AndreaGT91/Readme-Generator#readme",
-    "dependencies": {
-      "axios": "^0.19.2",
-      "dotenv": "^8.2.0",
-      "fs": "0.0.1-security",
-      "inquirer": "^7.1.0",
-      "util": "^0.12.2"
-    }
+  "name": "readme-generator",
+  "version": "1.0.0",
+  "description": "A command-line application that dynamically generates a professional README.md from a user's input using the Inquirer package.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dit1091/README-Generator.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dit1091/README-Generator/issues"
+  },
+  "homepage": "https://github.com/dit1091/README-Generator#readme-generator",
+  "dependencies": {
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
+    "inquirer": "^7.1.0",
+    "util": "^0.12.2"
   }
+}
